# fastapi_core

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py
config/: config.py  entrypoint.sh  pyproject.toml
core/auth/: auth_coach.py  auth_userfitbit.py  token.py
core/db/: connection.py  models_db.py
core/db/migrations/: env.py
core/db/migrations/versions/: 92d3808dac0e_first_migration.py
core/models/: __init__.py  base.py  record.py
core/requests/: __init__.py  get_all.py
core/service_example/: README.md  models.py  schemes.py  views.py
core/service_example/test/: test_models.py  test_views.py
core/tests/models/: test_base.py
devops/: entrypoint.sh  pyproject.toml
services/mobile_signal/: models.py  signal_predict_ml.py  views.py
services/mobile_signal/data/: README.md  data_explorer.py  mobile_signal_dataset.csv  rssi_model.pkl  tranform_dataset.py
