[tool.poetry]
name = "fastapi_core"
version = "0.1.0"
description = ""
authors = ["Adrian <adriansacristancontractor@gmail.com>", "Marina <marina.marint.hernandez@outloook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
sqlmodel = "^0.0.8"
google-api-python-client = "^2.65.0"
pytest = "^7.2.0"
fitbit = "^0.3.1"
Jinja2 = "^3.1.2"
alembic = "^1.9.1"
psycopg2 = "^2.9.5"
sentry-sdk = {extras = ["fastapi"], version = "^1.13.0"}
pytz = "^2022.7.1"
pytest-cov = "^4.0.0"
pandas = "^1.5.3"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
googlemaps = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
